fix: scanner text contrast when light mode

--- a/GrocyScanner.Service/wwwroot/css/site.css
+++ b/GrocyScanner.Service/wwwroot/css/site.css
@@ -70,3 +70,7 @@ a, .btn-link {
 html, html body, html body .mud-layout .mud-main-content {
     height: 100%;
 }
+
+.theme-light h4, .theme-light span {
+    color: var(--bs-gray-200);
+}
